--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "eth-marketplace",
   "version": "0.1.0",
   "description": "An Ethereum Marketplace",
-  "author": "gregory@dappuniversity.com",
+  "author": "rishabh",
   "dependencies": {
     "babel-polyfill": "6.26.0",
     "babel-preset-env": "1.7.0",
